# autocode

./: .gitpod.yml  OpenSumi技术开发与部署指南.docx  opensumi+c++.docx  opensumi+java.docx  opensumi+python.docx  opensumi+vue.docx  ~$ensumi+java.docx
.codefuse-ide/: launch.json
.sumi/: launch.json  settings.json
QtClient/: QtClient.sln
QtClient/QtClient/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MySQLHelper.cpp  MySQLHelper.h  QtClient.cpp  QtClient.h  QtClient.ui  QtClient.vcxproj  QtClient.vcxproj.filters  TModelTableViewModel.cpp  TModelTableViewModel.h  main.cpp
QtClient/QtQuickClient/: QtQuickClient.vcxproj
cpp-demo/: CMakeLists.txt  README.md  main.cpp  math_utils.cpp  math_utils.h  tasks.json
cpp-demo/.sumi/: launch.json
my-java-project/myproject/: pom.xml
my-java-project/myproject/.sumi/: launch.json
my-vue-app/: package-lock.json
my-vue-app/.sumi/: launch.json
my-vue-app/src/: App.vue
my-vue-app/src/components/: HelloWorld.vue
python-demo/: README.md  calculator.py  main.py  requirements.txt  test_debug.py  test_main.py  utils.py
python-demo/.sumi/: launch.json
todo/: .env  package-lock.json  package.json
todo/src/: App.vue  main.js  service.js  static.sql
todo/src/Models/: List.js  LogRegis.js
todo/src/Routes/: List.js  LogRegis.js  index.js
todo/src/Store/: Lstore.js  Store.js
todo/src/Views/: HelloView.vue  LoginView.vue  MainView.vue  RegisterView.vue
todo/src/config/: config.js  db.js
